[gd_scene load_steps=2 format=3 uid="uid://dhhpdmdt7lcqs"]

[ext_resource type="Script" path="res://ui/hud/hit_marker.gd" id="1"]

[node name="HitMarker" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TopLeft" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = -18.0

[node name="TopRight" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = -18.0

[node name="BottomLeft" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = 18.0
offset_right = -10.0
offset_bottom = 20.0

[node name="BottomRight" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 18.0
offset_right = 20.0
offset_bottom = 20.0
